[gd_scene load_steps=10 format=3 uid="uid://by4dhuudhaacl"]

[ext_resource type="AudioStream" uid="uid://bt47bispef2a5" path="res://Assets/coca.wav" id="1_2ivfx"]
[ext_resource type="Texture2D" uid="uid://gabn2sww826w" path="res://Assets/Fondo_2.png" id="1_ekw23"]
[ext_resource type="Texture2D" uid="uid://cishjn2how4or" path="res://Assets/Final-fotor-bg-remover-2024012601511.png" id="2_adbn8"]
[ext_resource type="Texture2D" uid="uid://cssuv74krqtty" path="res://Assets/botonEmpezar.png" id="3_w34bo"]
[ext_resource type="Script" path="res://Puerta.gd" id="4_1nlef"]
[ext_resource type="Script" path="res://Mickey.gd" id="4_2lkyk"]
[ext_resource type="Script" path="res://Manota.gd" id="6_nu6t0"]
[ext_resource type="Texture2D" uid="uid://c5e5bbn6nakjt" path="res://Assets/Mano.png" id="7_et8an"]
[ext_resource type="AudioStream" uid="uid://3i1cg0pkw65j" path="res://Assets/SFX/Menu.wav" id="9_8qpx1"]

[node name="Node2D" type="Node2D"]

[node name="MickeyAudio" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("1_2ivfx")

[node name="Mascara" type="Sprite2D" parent="."]
modulate = Color(0.223529, 0.223529, 0.223529, 0.694118)
top_level = true
position = Vector2(574.931, 326.313)
scale = Vector2(0.943576, 0.943577)
texture = ExtResource("1_ekw23")

[node name="Fondo" type="Sprite2D" parent="."]
show_behind_parent = true
position = Vector2(574.931, 326.313)
scale = Vector2(0.943576, 0.943577)
texture = ExtResource("1_ekw23")

[node name="Mickey" type="TextureButton" parent="."]
offset_left = 584.0
offset_top = 42.0
offset_right = 981.0
offset_bottom = 542.0
texture_normal = ExtResource("2_adbn8")
script = ExtResource("4_2lkyk")

[node name="Puerta" type="TextureButton" parent="."]
top_level = true
offset_left = 242.0
offset_top = 148.0
offset_right = 767.0
offset_bottom = 448.0
scale = Vector2(0.338124, 1.18209)
texture_normal = ExtResource("3_w34bo")
script = ExtResource("4_1nlef")

[node name="Manota" type="TextureButton" parent="."]
top_level = true
offset_left = 589.0
offset_top = 135.0
offset_right = 1613.0
offset_bottom = 1159.0
scale = Vector2(0.344643, 0.320781)
texture_normal = ExtResource("7_et8an")
script = ExtResource("6_nu6t0")

[node name="PuertaAudio" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("1_2ivfx")

[node name="ManotaAudio" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("1_2ivfx")

[node name="Audio" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("9_8qpx1")
autoplay = true

[connection signal="finished" from="MickeyAudio" to="Mickey" method="_on_audio_finished"]
[connection signal="pressed" from="Mickey" to="Mickey" method="on_pressed"]
[connection signal="pressed" from="Puerta" to="Puerta" method="on_pressed"]
[connection signal="pressed" from="Manota" to="Manota" method="on_pressed"]
[connection signal="finished" from="PuertaAudio" to="Puerta" method="_on_audio_finished"]
[connection signal="finished" from="ManotaAudio" to="Manota" method="_on_audio_finished"]
